--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quicksub",
-  "version": "0.8.0",
+  "version": "0.8.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +10,7 @@
     "stripe": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.4",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
